@@ -1,5 +1,7 @@
 2002-04-14  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c: pretty-fied the sub-pages too.
+
 	* src/yelp-window.c (yw_handle_url): pass the error to
 	  gnome_url_show.
 
